--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <input name="message" type="text" placeholder="Your message here..."/>
     <button>Send</button>
   </form>
+  <button id="send-location">Send location</button>
 
 
   <script src='/socket.io/socket.io.js'></script>
