--- a/public/chat.html
+++ b/public/chat.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="=utf-8">
   <title>Chat | Felix ChatApp</title>
-  <meta name="viewport" content="width=device-width, inital-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
   <link rel="stylesheet" href="/css/styles.css" />
 
 </head>
@@ -33,34 +33,35 @@
   </div>
 
   <script id="message-template" type="text/template">
-    <li class='message'>
-      <div class='message__title'>
+    <li class="message">
+      <div class="message__title">
         <h4>{{from}}</h4>
         <span>{{createdAt}}</span>
       </div>
-      <div class='message__body'>
+      <div class="message__body">
           <p>{{text}}</p>
       </div>
     </li>
   </script>
 
   <script id="location-message-template" type="text/template">
-    <li class='message'>
-      <div class='message__title'>
+    <li class="message">
+      <div class="message__title">
         <h4>{{from}}</h4>
         <span>{{createdAt}}</span>
       </div>
-      <div class='message__body'>
+      <div class="message__body">
           <p><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </li>
   </script>
 
-  <script src='/socket.io/socket.io.js'></script>
-  <script src='/js/libs/jquery-3.3.1.min.js'></script>
-  <script src='/js/libs/moment.js'></script>
-  <script src='js/libs/mustache.js'></script>
-  <script src='/js/chat.js'></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/libs/jquery-3.3.1.min.js"></script>
+  <script src="/js/libs/moment.js"></script>
+  <script src="js/libs/mustache.js"></script>
+  <script src="/js/libs/deparam.js"></script>
+  <script src="/js/chat.js"></script>
 
 </body>
 
